--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "react-frontend-dev-portfolio",
+  "name": "portfolio",
+  
   "version": "0.1.0",
   "private": true,
   "dependencies": {
